# economy-game-179

./: .dockerignore  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  alembic.ini  cov.xml  docker-compose.yml  environment-dev.yml  make-dev-env.sh  make-env.sh  start-maria-db.sh
.github/workflows/: tests.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  start-maria-db.sh  start-mariadb.sh
backend/alembic/: env.py  initial_data.yaml.example
backend/alembic/versions/: 2_create_tables.py
backend/egame179_backend/: __init__.py  __main__.py  app.py  engine.py  lifetime.py  settings.py
backend/egame179_backend/api/: __init__.py  balance.py  bulletin.py  cycle.py  cycle_params.py  market.py  market_price.py  modificators.py  monitoring.py  price.py  product.py  production.py  router.py  stocks.py  supply.py  transaction.py  warehouse.py
backend/egame179_backend/api/auth/: __init__.py  dependencies.py  views.py
backend/egame179_backend/api/balance/: __init__.py  views.py
backend/egame179_backend/api/cycle/: __init__.py  views.py
backend/egame179_backend/api/market/: __init__.py  views.py
backend/egame179_backend/api/monitoring/: __init__.py
backend/egame179_backend/api/price/: __init__.py  views.py
backend/egame179_backend/app/: __init__.py  app.py  lifetime.py
backend/egame179_backend/app/api/: router.py
backend/egame179_backend/app/api/auth/: __init__.py  dependencies.py  schema.py  views.py
backend/egame179_backend/app/api/balance/: views.py
backend/egame179_backend/app/api/cycle/: __init__.py  views.py
backend/egame179_backend/app/api/echo/: views.py
backend/egame179_backend/app/api/market/: __init__.py  views.py
backend/egame179_backend/app/web/: lifetime.py
backend/egame179_backend/app/web/api/: router.py
backend/egame179_backend/app/web/api/echo/: __init__.py  views.py
backend/egame179_backend/app/web/api/monitoring/: __init__.py
backend/egame179_backend/db/: __init__.py  balance.py  base.py  bulletin.py  cycle.py  cycle_params.py  market.py  market_price.py  models.py  modificators.py  npc.py  price.py  product.py  production.py  session.py  stocks.py  supply.py  sync_status.py  theta.py  transaction.py  user.py  utils.py  warehouse.py  world_demand.py
backend/egame179_backend/db/dao/: __init__.py  balance.py  cycle.py  cycles.py  dummy_dao.py  market.py  user.py  users.py  users_dao.py
backend/egame179_backend/db/models/: __init__.py  dummy_model.py
backend/egame179_backend/engine/: calc.py  cycle.py  cycles.py  engine.py  math.py  mechanics.py  utility.py
backend/egame179_backend/legacy/: app.py  db.py  engine.py  structures.py
backend/egame179_backend/services/: __init__.py
backend/egame179_backend/web/: __init__.py  application.py  lifetime.py
backend/egame179_backend/web/api/: router.py
backend/egame179_backend/web/api/docs/: __init__.py
backend/egame179_backend/web/api/dummy/: __init__.py  views.py
backend/egame179_backend/web/api/echo/: __init__.py  views.py
backend/egame179_backend/web/api/monitoring/: __init__.py
backend/migrations/: env.py
backend/migrations/versions/: 1_inital.py  2022-08-31-17-00_819cbf6e030b.py  2022-09-03-12-30_2b7380507a71.py  2_create_tables.py  3_insert_initial_data.py
backend/tests/: __init__.py  conftest.py  test_dummy.py
frontend/: Dockerfile  README.md  _reinit_db.sh  pyproject.toml
frontend/css/: menu.css.json  style.css
frontend/egame179_frontend/: __init__.py  api.py  app.py  fetch.py  fetch_ui.py  initialize.py  login.py  models.py  settings.py  state.py  style.py  sync.py  visualization.py
frontend/egame179_frontend/api/: __init__.py  auth.py  balance.py  bulletin.py  cycle.py  cycle_params.py  fetch.py  market.py  mock.py  models.py  modificators.py  player_mock.json  price.py  product.py  production.py  states.py  stocks.py  supply.py  sync.py  transaction.py  user.py  warehouse.py
frontend/egame179_frontend/legacy/: db.py  login.py  markets.py  root.py  stocks.py  update_state.py  user.py
frontend/egame179_frontend/state/: __init__.py  news.py  player.py  root.py  session.py  shared.py  state.py
frontend/egame179_frontend/views/: __init__.py  base.py  base_view.py  login.py  logout.py  news.py  registry.py
frontend/egame179_frontend/views/admin/: __init__.py  dashboard.py  markets.py  stocks.py  storages.py  supplies.py  transactrions.py
frontend/egame179_frontend/views/player/: __init__.py  manufacturing.py  markets.py  overview.py  sales.py  stocks.py  storage.py  supplies.py  transactions.py
frontend/egame179_frontend/views/root/: __init__.py  dashboard.py
frontend/egame179_frontend/views/user/: __init__.py  main_page.py  manufacturing.py  markets.py  overview.py  sales.py  stocks.py  storage.py  transactions.py
migrations/: env.py
migrations/versions/: 2022-09-03-12-30_2b7380507a71.py  2_create_tables.py
notebooks/: economy-model.ipynb
notebooks/legacy/: math-model.ipynb  sqlalchemy.ipynb
