[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "egame179_frontend"
description = "Streamlit frontend for economic strategy game."
authors = [
    {name = "Yan Budakyan", email = "astromid@gmail.com"}
]
version = "0.0.1"
readme = "README.md"
license = {text = "MIT License"}
python_requires = ">=3.10"
dependencies = [
    "httpx",
    "millify",
    "networkx",
    "omegaconf",
    "pandas",
    "pydantic[dotenv]",
    "streamlit",
    "streamlit-option-menu",
    "streamlit-server-state",
    "ujson",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
    /(
        \.eggs
        | \.git
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | _build
        | buck-out
        | build
        | dist
        | docs
    )/
)
'''

[tool.mypy]
python_version = "3.10"
# strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false
warn_unused_configs = true
plugins = ["sqlalchemy.ext.mypy.plugin", "numpy.typing.mypy_plugin", "pydantic.mypy"]

[tool.refurb]
python_version = "3.10"
